--- a/index.html
+++ b/index.html
@@ -41,21 +41,24 @@
                         <div class="inputWrapper">
                             <input class="psw" type="password" name="" id="" placeholder="Password">
                         </div>
-                        <div class="remember-me--forget-password">
+                        <div class="checkbox">
                             <label>
-                                <input type="checkbox" name="item" checked/>
-                                <span class="text-checkbox">Remember me</span>
+                                <input type="checkbox" name="item" checked />
                             </label>
-                            <p class="forget-pass">Forget password?</p>
                         </div>
+                        <div id="remember">Remember Me</div>
+                        <div id="forgot">Forgot Password?</div>
+
                         <div class="inputWrapper">
                             <button class="loginButton" type="submit">
                                 <h3 class="h3">Login</h3>
                             </button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
